@@ -1,6 +1,8 @@
 gnome-settings-daemon (3.16.2-1) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * debian/control.in:
+    + Update (build-)dependencies.
 
  -- Emilio Pozuelo Monfort <pochu@debian.org>  Sat, 30 May 2015 22:31:54 +0200
 
